updated css, needs a bit more tweaking but pretty close

--- a/css/index.css
+++ b/css/index.css
@@ -207,4 +207,47 @@ button:hover {
 
 /* Mobile Settings */
 @media only screen and (max-width: 500px) {
+  .title-container h1 {
+    font-size: 4.5rem;
+    line-height: 1.3;
+    font-weight: 800;
+  }
+
+  .title-container div {
+    width: 100%;
+  }
+
+  .title-container hr {
+    width: 100%;
+    border: 1px solid #9a9a9a;
+  }
+
+  .artists-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .artist {
+    width: 60%;
+  }
+
+  .artist a {
+    font-size: 1.8rem;
+  }
+
+  img {
+    height: auto;
+  }
+
+  nav {
+    width: 40%;
+  }
+
+  nav a {
+    font-size: 1.4rem;
+  }
+
+  nav span {
+    border: 1px solid #626262;
+  }
 }
