--- a/css/index.css
+++ b/css/index.css
@@ -93,7 +93,7 @@ html {
 }
 body {
   font-size: 1.6rem;
-  line-height: 1.5;
+  line-height: 1.3;
   font-family: "Raleway", sans-serif;
 }
 h1,
@@ -149,7 +149,7 @@ nav a {
   color: #626262;
 }
 nav span {
-  border-left: 3px solid #626262;
+  border-left: 0.3rem solid #626262;
 }
 /*Title Section Styles*/
 .title-container {
@@ -205,6 +205,40 @@ button:hover {
   width: 100%;
 }
 
+/* Tablet Settings */
+@media only screen and (max-width: 800px) {
+  nav {
+    width: 50%;
+  }
+
+  .artists-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .artist {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .artist img {
+    height: auto;
+    width: 60%;
+    margin: 5% 0;
+  }
+
+  .title-container div {
+    width: 100%;
+  }
+
+  .title-container hr {
+    width: 100%;
+    border: 1px solid #9a9a9a;
+  }
+}
+
 /* Mobile Settings */
 @media only screen and (max-width: 500px) {
   .title-container h1 {
@@ -228,19 +262,24 @@ button:hover {
   }
 
   .artist {
-    width: 60%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .artist a {
     font-size: 1.8rem;
   }
 
-  img {
+  .artist img {
     height: auto;
+    width: 60%;
+    margin: 5% 0;
   }
 
   nav {
-    width: 40%;
+    width: 50%;
   }
 
   nav a {
@@ -249,5 +288,14 @@ button:hover {
 
   nav span {
     border: 1px solid #626262;
+  }
+
+  button {
+    padding: 2% 5%;
+    margin: 5% 0;
+  }
+
+  .bio {
+    font-size: 1.3rem;
   }
 }
